fix: <Highlight> empty wrap div breaks styling

--- a/components/people/profile_card/profile_card.scss
+++ b/components/people/profile_card/profile_card.scss
@@ -10,6 +10,12 @@
     border-radius: 4px;
     box-shadow: var(--elevation-1);
 
+    // HACKHACKHACK: <Highlight> component wraps in empty div
+    > div {
+        display: flex;
+        flex-direction: column;
+    }
+
     &__role {
         width: fit-content;
         padding: 0 4px;
